# inscription-indexer

./: .gitignore  Cargo.toml  Makefile  README.md  chains.config.yaml  docker-compose.yaml
docker/: indexer.dockerfile
prisma/: schema.prisma
src/: config.rs  main.rs  utils.rs
src/indexer/: database.rs  inscription.rs  keys.rs  mod.rs
