[package]
name = "inscription"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="inscription"
path="src/main.rs"

[dependencies]
ethers = {version = "2.0.8", features=["ws", "rustls"]}
eyre = "0.6.8"
anyhow = "1.0.75"
log = "0.4.19"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["migrations", "postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["migrations", "postgresql"] }
serde = { version="1.0.178", features=["derive"] }
serde_json = "1.0.104"
regex = "1.9.1"
serde_yaml = "0.9.28"
lazy_static = "1.4.0"
dotenv = "0.15.0"
tempfile = "3.9.0"
bigdecimal = "0.4.2"
async-trait = "0.1.75"

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
